syntax = "proto2";
package toniehead;

message TonieboxAudioFileHeader {
  required bytes sha1_hash = 1;
  required uint64 num_bytes = 2;
  required uint32 audio_id = 3;
  repeated uint32 track_page_nums = 4 [packed=true];
  required bytes _fill = 5;
}
